@@ -461,7 +461,7 @@ Rmcmc <- buildMCMC(mcmcConf, enableWAIC = TRUE)
 
 \cd{buildMCMC} is a nimbleFunction.  The returned object \cd{Rmcmc} is an instance  of the nimbleFunction specific to configuration \cd{mcmcConf} (and of course its associated model).  
 
-Note that if you would like to be able to calculate the WAIC of the model after the MCMC function has been run, you must set \cd{enableWAIC = TRUE} as an argument to \cd{buildMCMC}, or set \cd{nimbleOptions(enableWAIC = TRUE)}, which will enable WAIC calculations for all subsequently built MCMC functions.  For more information on WAIC calculations, see Section \ref{sec:WAIC} or \cd{help(buildMCMC)} in R.
+Note that if you would like to be able to calculate the WAIC of the model after the MCMC function has been run, you must set \cd{enableWAIC = TRUE} as an argument to either \cd{configureMCMC} or \cd{buildMCMC}, or set \cd{nimbleOptions(enableWAIC = TRUE)}, which will enable WAIC calculations for all subsequently built MCMC functions.  For more information on WAIC calculations, see Section \ref{sec:WAIC} or \cd{help(buildMCMC)} in R.
 
 When no customization is needed, one can skip \cd{configureMCMC} and simply provide a model object to \cd{buildMCMC}. The following two MCMC functions will be identical:
 
@@ -623,7 +623,7 @@ Obtaining samples as matrices is most common, but see Section \ref{sec:modelValu
 \section{Calculating WAIC}
 \label{sec:WAIC}
 
-Once an MCMC algorithm has been run, as described in \ref{sec:executing-the-mcmc-algorithm}, the WAIC \citep{Watanabe_2010} can be calculated from the posterior samples produced by the MCMC algorithm.  Note that in order to calculate the WAIC value after running an MCMC algorithm, the argument \cd{enableWAIC = TRUE} must have been supplied to the call to \cd{buildMCMC}, or the \cd{enableWAIC} NIMBLE option must have been set to \cd{TRUE}.
+Once an MCMC algorithm has been run, as described in \ref{sec:executing-the-mcmc-algorithm}, the WAIC \citep{Watanabe_2010} can be calculated from the posterior samples produced by the MCMC algorithm.  Note that in order to calculate the WAIC value after running an MCMC algorithm, the argument \cd{enableWAIC = TRUE} must have been supplied to \cd{configureMCMC} or to \cd{buildMCMC}, or the \cd{enableWAIC} NIMBLE option must have been set to \cd{TRUE}.
 
 The WAIC is calculated by calling the member method \cd{mcmc\$calculateWAIC} (see \cd{help(buildMCMC)} in R for more details).  The \cd{calculateWAIC} method has one required argument, \cd{nburnin}, the number of initial samples to discard prior to WAIC calculation.  \cd{nburnin} defaults to 0.
 
